--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.joi.api</groupId>
-    <artifactId>api-gatway</artifactId>
+    <artifactId>zuul-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>api-gatway</name>
-    <description>zuul-eureka-service
-</description>
+    <name>Zuul Server</name>
+    <description>API Gateay (Zuul)</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -44,6 +43,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
