--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
 spring.application.name=zuul-server
-spring.cloud.config.uri=http://localhost:8888
-management.security.enabled=false
+#spring.cloud.config.uri=http://localhost:8888
+
+spring.cloud.config.uri=http://joi-api-cloud-config-server.ap-southeast-1.elasticbeanstalk.com:8888
+management.security.enabled=false   
